# pico-clock

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
.github/workflows/: build.yml
scripts/: bootstrap-pico.sh
src/: clock.c  clock.h  config.c  config.h  cpr_compat.c  cpr_compat.h  display.c  display.h  lwipopts.h  main.c  network.c  network.h  runtime.c  runtime.h
src/arch/: sys_arch.h
